開発中：カレンダー 修正
色調整など

--- a/css/index.css
+++ b/css/index.css
@@ -4,26 +4,24 @@
 
 body {
   margin: 0;
-  background: #000;
-  display: flex;
-  justify-content: center;
   font-family: system-ui, sans-serif;
 }
 
 .app {
   width: 100%;
   height: 100%;
-  background: #f6f1ef;
+  background: #FFFBFF;
   overflow: hidden;
   position: relative;
+  color: #5C1F2C;
 }
 
 /* ヘッダー */
-#top-bar {
+#calendar-operation {
   display: flex;
   align-items: center;
   height: 7vh;
-  background: #b88f9a;
+  background: #A93951;
   color: #000;
 }
 
@@ -31,40 +29,39 @@ body {
   display: flex;
   align-items: center;
   padding: 8px;
-  background: #b88f9a;
   color: #000;
 }
 
-.nav-btn {
-  background: none;
-  border: none;
-  font-size: 20px;
-}
-
 #month-label {
-  width: 170px;
+  width: 150px;
   text-align: center;
   font-weight: bold;
-  padding-top: 3vh;
   position: unset;
+  color: #551119;
+  font-size: 3vh;
 }
 
 #header-icons {
   display: flex;
   position: absolute;
-  gap: 10px;
-  right: 15px;
+  gap: 25px;
+  right: 20px;
 }
 
 /* 曜日 */
 #weekdays {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  background: #d8c6cc;
+  background: #D17589;
   text-align: center;
-  font-size: 12px;
   height: 2.5vh;
+  font-size: 2vh;
+  color: #551119;
   position: relative;
+}
+
+.weekday {
+  border-left: 1px solid #8f666e;
 }
 
 /* カレンダー */
@@ -76,7 +73,8 @@ body {
 }
 
 .day {
-  border: 1px solid #999;
+  border-left: 1px solid #bda4a9;
+  border-bottom: 1px solid #bda4a9;
   padding: 2px;
   font-size: 10px;
 }
@@ -86,15 +84,32 @@ body {
 }
 
 .day.today {
-  background: #d7c7d6;
+  background: #eee5ed;
+}
+
+.day.sunday {
+  color: #df0019;
+}
+
+.day.other.sunday {
+  color: #b97981;
+}
+
+.day.saturday {
+  color: #2e00ff;
+}
+
+.day.other.saturday {
+  color: #9b95b4;
 }
 
 /* 日付ヘッダー */
 #day-header {
-  background: #d8c6cc;
-  padding-left: 4px;
+  background: #D17589;
+  padding-left: 1vw;
   height: 2.5vh;
-  font-size: 12px;
+  font-size: 2vh;
+  color: #551119;
 }
 
 /* メモ */
@@ -103,16 +118,26 @@ body {
 }
 
 /* フッター */
-#bottom-bar {
+footer {
+  display: block;
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: 0px;
   width: 100%;
+}
+
+#menu-bar {
+  position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: 7vh;
-  background: #b88f9a;
+  background: #A92231;
+}
+
+#bottom { 
+  position: relative;
+  height: 2.5vh;
+  background-color: black;
 }
 
 /* 黒丸アイコン */
