--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
   margin: 0;
   font-family: system-ui, sans-serif;
@@ -12,52 +8,53 @@ body {
   height: 100%;
   background: #FFFBFF;
   overflow: hidden;
-  position: relative;
   color: #5C1F2C;
 }
 
 /* ヘッダー */
 #calendar-operation {
   display: flex;
-  align-items: center;
-  height: 7vh;
+  height: 5vh;
   background: #A93951;
-  color: #000;
 }
 
 #current-month {
   display: flex;
   align-items: center;
   padding: 8px;
-  color: #000;
 }
 
 #month-label {
-  width: 150px;
+  width: 30vw;
   text-align: center;
   font-weight: bold;
-  position: unset;
-  color: #551119;
-  font-size: 3vh;
+  color: #310a0e;
+  font-size: 2.5vh;
+}
+.month-change-icon {
+  max-height: 2.5vh;
+}
+.calendar-operation-icon {
+  max-height: 4vh;
 }
 
 #header-icons {
   display: flex;
   position: absolute;
-  gap: 25px;
-  right: 20px;
+  gap: 30px;
+  right: 25px;
 }
 
 /* 曜日 */
 #weekdays {
   display: grid;
+  position: relative;
   grid-template-columns: repeat(7, 1fr);
   background: #D17589;
   text-align: center;
   height: 2.5vh;
   font-size: 2vh;
   color: #551119;
-  position: relative;
 }
 
 .weekday {
@@ -76,7 +73,7 @@ body {
   border-left: 1px solid #bda4a9;
   border-bottom: 1px solid #bda4a9;
   padding: 2px;
-  font-size: 10px;
+  font-size: 1.5vh;
 }
 
 .day.other {
@@ -105,16 +102,16 @@ body {
 
 /* 日付ヘッダー */
 #day-header {
-  background: #D17589;
   padding-left: 1vw;
   height: 2.5vh;
   font-size: 2vh;
+  background: #D17589;
   color: #551119;
 }
 
 /* メモ */
 #memo-area {
-  height: 38vh;
+  height: 40vh;
 }
 
 /* フッター */
@@ -126,24 +123,20 @@ footer {
 }
 
 #menu-bar {
-  position: relative;
   display: flex;
+  position: relative;
   justify-content: space-around;
   align-items: center;
   height: 7vh;
   background: #A92231;
 }
 
-#bottom { 
+#bottom {
   position: relative;
-  height: 2.5vh;
+  height: 4vh;
   background-color: black;
 }
 
-/* 黒丸アイコン */
-.icon {
-  width: 20px;
-  height: 20px;
-  background: #000;
-  border-radius: 50%;
+.menu-icon {
+  max-height: 5.5vh;
 }
